plugins {
    id 'java'
    id 'application'
    id 'org.beryx.jlink' version '2.26.0'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}


group 'space.typro'
version '1.0-SNAPSHOT'

sourceCompatibility = '21'
targetCompatibility = '21'

repositories {
    mavenCentral()
}



dependencies {
    implementation 'org.openjfx:javafx-controls:21'
    implementation 'org.openjfx:javafx-fxml:21'

    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'

    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'

    testImplementation "org.junit.jupiter:junit-jupiter-api:5.9.2"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.9.2"


    implementation 'org.jetbrains:annotations:13.0'

    compileOnly 'org.projectlombok:lombok:1.18.30'

    annotationProcessor 'org.projectlombok:lombok:1.18.30'
}

javafx {
    version = "21"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base']
}

application {
    mainClass = 'space.typro.typicallauncher.Main'
}

jar {
    manifest {
        attributes 'Main-Class': 'space.typro.typicallauncher.Main'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
run {
    jvmArgs = [
            "--module-path", classpath.asPath,
            "--add-modules", "javafx.controls,javafx.fxml"
    ]
}
test {
    useJUnitPlatform()
}